bgen: add new debug instrumentation.

--- a/bgen/Makefile
+++ b/bgen/Makefile
@@ -68,8 +68,8 @@ _ECSOURCES = \
 	src/econe.ec \
 	src/ectwo.ec \
 	src/gen.ec \
-	src/debug.ec \
-	src/miscTypes.ec
+	src/miscTypes.ec \
+	src/debug.ec
 
 ECSOURCES = $(call shwspace,$(_ECSOURCES))
 
@@ -93,9 +93,13 @@ ECOBJECTS = $(call shwspace,$(_ECOBJECTS))
 
 BOWLS = $(call shwspace,$(_BOWLS))
 
-OBJECTS = $(ECOBJECTS) $(OBJ)$(MODULE).main$(O)
+_OBJECTS = \
+	$(OBJ)debug.c$(O)
 
-SOURCES = $(ECSOURCES)
+OBJECTS = $(_OBJECTS) $(ECOBJECTS) $(OBJ)$(MODULE).main$(O)
+
+SOURCES = $(ECSOURCES) \
+	src/debug.c
 
 RESOURCES = \
 	src/c/c_header_open.src \
@@ -127,7 +131,8 @@ LIBS += \
 endif
 
 PRJ_CFLAGS += \
-	 $(if $(DEBUG), -g, -O2 -ffast-math) $(FPIC) -w -DREPOSITORY_VERSION="\"$(REPOSITORY_VER)\""
+	 $(if $(DEBUG), -g, -O2 -ffast-math) $(FPIC) -w -DREPOSITORY_VERSION="\"$(REPOSITORY_VER)\"" \
+			 -Isrc
 
 ECFLAGS += -module $(MODULE)
 ECFLAGS += \
@@ -165,7 +170,7 @@ $(SYMBOLS): | objdir
 $(OBJECTS): | objdir
 $(TARGET): $(SOURCES) $(RESOURCES_EAR) $(SYMBOLS) $(OBJECTS) | objdir
 ifndef STATIC_LIBRARY_TARGET
-	$(CC) $(OFLAGS) $(OBJ)$(MODULE).main$(O) $(ECOBJECTS) $(LIBS) -o $(TARGET) $(INSTALLNAME)
+	$(CC) $(OFLAGS) $(OBJ)$(MODULE).main$(O) $(_OBJECTS) $(ECOBJECTS) $(LIBS) -o $(TARGET) $(INSTALLNAME)
 ifndef NOSTRIP
 	$(STRIP) $(STRIPOPT) $(TARGET)
 endif
@@ -249,10 +254,10 @@ $(OBJ)ectwo.sym: src/ectwo.ec
 $(OBJ)gen.sym: src/gen.ec
 	$(ECP) $(CFLAGS) $(CECFLAGS) $(ECFLAGS) $(PRJ_CFLAGS) -c $(call quote_path,$<) -o $(call quote_path,$@)
 
-$(OBJ)debug.sym: src/debug.ec
+$(OBJ)miscTypes.sym: src/miscTypes.ec
 	$(ECP) $(CFLAGS) $(CECFLAGS) $(ECFLAGS) $(PRJ_CFLAGS) -c $(call quote_path,$<) -o $(call quote_path,$@)
 
-$(OBJ)miscTypes.sym: src/miscTypes.ec
+$(OBJ)debug.sym: src/debug.ec
 	$(ECP) $(CFLAGS) $(CECFLAGS) $(ECFLAGS) $(PRJ_CFLAGS) -c $(call quote_path,$<) -o $(call quote_path,$@)
 
 # C OBJECT RULES
@@ -314,10 +319,10 @@ $(OBJ)ectwo.c: src/ectwo.ec $(OBJ)ectwo.sym | $(SYMBOLS)
 $(OBJ)gen.c: src/gen.ec $(OBJ)gen.sym | $(SYMBOLS)
 	$(ECC) $(CFLAGS) $(CECFLAGS) $(ECFLAGS) $(PRJ_CFLAGS) $(FVISIBILITY) -c $(call quote_path,$<) -o $(call quote_path,$@) -symbols $(OBJ)
 
-$(OBJ)debug.c: src/debug.ec $(OBJ)debug.sym | $(SYMBOLS)
+$(OBJ)miscTypes.c: src/miscTypes.ec $(OBJ)miscTypes.sym | $(SYMBOLS)
 	$(ECC) $(CFLAGS) $(CECFLAGS) $(ECFLAGS) $(PRJ_CFLAGS) $(FVISIBILITY) -c $(call quote_path,$<) -o $(call quote_path,$@) -symbols $(OBJ)
 
-$(OBJ)miscTypes.c: src/miscTypes.ec $(OBJ)miscTypes.sym | $(SYMBOLS)
+$(OBJ)debug.c: src/debug.ec $(OBJ)debug.sym | $(SYMBOLS)
 	$(ECC) $(CFLAGS) $(CECFLAGS) $(ECFLAGS) $(PRJ_CFLAGS) $(FVISIBILITY) -c $(call quote_path,$<) -o $(call quote_path,$@) -symbols $(OBJ)
 
 # OBJECT RULES
@@ -379,11 +384,14 @@ $(OBJ)ectwo$(O): $(OBJ)ectwo.c
 $(OBJ)gen$(O): $(OBJ)gen.c
 	$(CC) $(CFLAGS) $(PRJ_CFLAGS) $(FVISIBILITY) -c $(call quote_path,$<) -o $(call quote_path,$@)
 
+$(OBJ)miscTypes$(O): $(OBJ)miscTypes.c
+	$(CC) $(CFLAGS) $(PRJ_CFLAGS) $(FVISIBILITY) -c $(call quote_path,$<) -o $(call quote_path,$@)
+
 $(OBJ)debug$(O): $(OBJ)debug.c
 	$(CC) $(CFLAGS) $(PRJ_CFLAGS) $(FVISIBILITY) -c $(call quote_path,$<) -o $(call quote_path,$@)
 
-$(OBJ)miscTypes$(O): $(OBJ)miscTypes.c
-	$(CC) $(CFLAGS) $(PRJ_CFLAGS) $(FVISIBILITY) -c $(call quote_path,$<) -o $(call quote_path,$@)
+$(OBJ)debug.c$(O): src/debug.c
+	$(CC) $(CFLAGS) $(PRJ_CFLAGS) -c $(call quote_path,$<) -o $(call quote_path,$@)
 
 $(OBJ)$(MODULE).main$(O): $(OBJ)$(MODULE).main.c
 	$(CC) $(CFLAGS) $(PRJ_CFLAGS) $(FVISIBILITY) -c $(OBJ)$(MODULE).main.c -o $(call quote_path,$@)
