ecere: Tweaked Makefile to support alternate versions of OpenSSL

--- a/ecere/Makefile
+++ b/ecere/Makefile
@@ -496,8 +496,10 @@ LIBS += \
 	$(call _L,winspool) \
 	$(call _L,imm32) \
 	$(call _L,ungif) \
-	$(if $(ENABLE_SSL),$(call _L,eay32)) \
-	$(if $(ENABLE_SSL),$(call _L,ssleay32))
+	$(if $(and $(ENABLE_SSL),$(wildcard $(OPENSSL_BIN_DIR)/libcrypto-1_1-x64.dll)),$(call _L,crypto-1_1-x64)) \
+	$(if $(and $(ENABLE_SSL),$(wildcard $(OPENSSL_BIN_DIR)/libssl-1_1-x64.dll)),$(call _L,ssl-1_1-x64)) \
+	$(if $(and $(ENABLE_SSL),$(wildcard $(OPENSSL_BIN_DIR)/libeay32.dll)),$(call _L,eay32)) \
+	$(if $(and $(ENABLE_SSL),$(wildcard $(OPENSSL_BIN_DIR)/ssleay32.dll)),$(call _L,ssleay32))
 endif
 
 else
