tarball; make EDASQLite compilation/installation optional.

--- a/eda/Makefile
+++ b/eda/Makefile
@@ -2,6 +2,10 @@ ifneq ($(V),1)
 .SILENT:
 endif
 
+ifndef DISABLE_EDA_SQLITE
+  EDASQLite := defined
+endif
+
 .PHONY: all cleantarget clean realclean wipeclean distclean
 
 _CF_DIR = ../
@@ -12,8 +16,10 @@ include $(_CF_DIR)default.cf
 all:
 	@$(call echo,Building Ecere Data Access layer...)
 	+cd libeda && $(_MAKE)
+ifdef EDASQLite
 	@$(call echo,Building EDASQLite driver...)
 	+cd drivers && cd sqlite && $(_MAKE)
+endif
 ifdef EDASQLiteCipher
 	@$(call echo,Building EDASQLiteCipher driver...)
 	+cd drivers && cd sqliteCipher && $(_MAKE)
@@ -21,21 +27,27 @@ endif
 
 cleantarget:
 	+cd libeda && $(_MAKE) cleantarget
+ifdef EDASQLite
 	+cd drivers && cd sqlite && $(_MAKE) cleantarget
+endif
 ifdef EDASQLiteCipher
 	+cd drivers && cd sqliteCipher && $(_MAKE) cleantarget
 endif
 
 clean:
 	+cd libeda && $(_MAKE) clean
+ifdef EDASQLite
 	+cd drivers && cd sqlite && $(_MAKE) clean
+endif
 ifdef EDASQLiteCipher
 	+cd drivers && cd sqliteCipher && $(_MAKE) clean
 endif
 
 realclean:
 	+cd libeda && $(_MAKE) realclean
+ifdef EDASQLite
 	+cd drivers && cd sqlite && $(_MAKE) realclean
+endif
 ifdef EDASQLiteCipher
 	+cd drivers && cd sqliteCipher && $(_MAKE) realclean
 endif
