tarball: add Makefile for EDAdBASE driver. add EDAdBASE driver to ecere sdk build.

--- a/eda/Makefile
+++ b/eda/Makefile
@@ -6,6 +6,10 @@ ifndef DISABLE_EDA_SQLITE
   EDASQLite := defined
 endif
 
+ifndef DISABLE_EDA_SQLITE
+  EDAdBASE := defined
+endif
+
 .PHONY: all cleantarget clean realclean wipeclean distclean
 
 _CF_DIR = ../
@@ -16,6 +20,10 @@ include $(_CF_DIR)default.cf
 all:
 	@$(call echo,Building Ecere Data Access layer...)
 	+cd libeda && $(_MAKE)
+ifdef EDAdBASE
+	@$(call echo,Building EDAdBASE driver...)
+	+cd drivers && cd dbase && $(_MAKE)
+endif
 ifdef EDASQLite
 	@$(call echo,Building EDASQLite driver...)
 	+cd drivers && cd sqlite && $(_MAKE)
@@ -27,6 +35,9 @@ endif
 
 cleantarget:
 	+cd libeda && $(_MAKE) cleantarget
+ifdef EDAdBASE
+	+cd drivers && cd dbase && $(_MAKE) cleantarget
+endif
 ifdef EDASQLite
 	+cd drivers && cd sqlite && $(_MAKE) cleantarget
 endif
@@ -36,6 +47,9 @@ endif
 
 clean:
 	+cd libeda && $(_MAKE) clean
+ifdef EDAdBASE
+	+cd drivers && cd dbase && $(_MAKE) clean
+endif
 ifdef EDASQLite
 	+cd drivers && cd sqlite && $(_MAKE) clean
 endif
@@ -45,6 +59,9 @@ endif
 
 realclean:
 	+cd libeda && $(_MAKE) realclean
+ifdef EDAdBASE
+	+cd drivers && cd dbase && $(_MAKE) realclean
+endif
 ifdef EDASQLite
 	+cd drivers && cd sqlite && $(_MAKE) realclean
 endif
@@ -54,6 +71,7 @@ endif
 
 wipeclean:
 	+cd libeda && $(_MAKE) wipeclean
+	+cd drivers && cd dbase && $(_MAKE) wipeclean
 	+cd drivers && cd sqlite && $(_MAKE) wipeclean
 	+cd drivers && cd sqliteCipher && $(_MAKE) wipeclean
 
