--- a/bindings/cpp/Makefile
+++ b/bindings/cpp/Makefile
@@ -2,7 +2,7 @@ include ../bgen_setup.mk
 
 _BGEN_LANGNAME := C++
 _BGEN_LIBS := ecereCOM ecere EDA
-_BGEN_ARGS := $(_BGEN_AUTO_ARGS) -all -map fren,Log=__e_log,Logf=__e_logf,Sleep=__sleep,Print=_print
+_BGEN_ARGS := -fren Log=__e_log,Logf=__e_logf,Sleep=__sleep,Print=_print $(_BGEN_AUTO_ARGS)
 _BGEN_OUTPUT := $(addsuffix .hpp,$(_BGEN_OUTS)) $(addsuffix .cpp,$(_BGEN_OUTS))
 
 all: #$(_BGEN_OUTPUT)
