--- a/bindings/c/Makefile
+++ b/bindings/c/Makefile
@@ -2,7 +2,7 @@ include ../bgen_setup.mk
 
 _BGEN_LANGNAME := C
 _BGEN_LIBS := ecereCOM ecere EDA
-_BGEN_ARGS := $(_BGEN_AUTO_ARGS) -all -map fren,Log=__e_log,Logf=__e_logf,Sleep=__sleep,Print=printx
+_BGEN_ARGS := -map fren,Log=__e_log,Logf=__e_logf,Sleep=__sleep,Print=printx $(_BGEN_AUTO_ARGS)
 _BGEN_OUTPUT := $(addsuffix .h,$(_BGEN_OUTS)) $(addsuffix .c,$(_BGEN_OUTS))
 
 all: $(_BGEN_OUTPUT)
