--- a/samples/android/android/AndroidManifest.xml
+++ b/samples/android/android/AndroidManifest.xml
@@ -18,7 +18,7 @@
       android:hardwareAccelerated="true">
 
         <!-- Our activity is the built-in NativeActivity framework class. This will take care of integrating with our NDK code. -->
-        <activity android:name="hello"
+        <activity android:name=".hello"
                   android:label="@string/app_name"
                   android:configChanges="orientation|keyboardHidden">
             <!-- Tell NativeActivity the name of our .so -->
@@ -31,5 +31,5 @@
         </activity>
     </application>
 
-</manifest> 
+</manifest>
 <!-- END_INCLUDE(manifest) -->
