--- a/samples/games/chess/android/AndroidManifest.xml
+++ b/samples/games/chess/android/AndroidManifest.xml
@@ -8,12 +8,18 @@
     <!-- This is the platform API where NativeActivity was introduced. -->
     <uses-sdk android:minSdkVersion="9" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <!-- This .apk has no Java code itself, so set hasCode to false. -->
-    <application android:label="@string/app_name" android:hasCode="false" android:icon="@drawable/icon">
+    <application
+      android:label="@string/app_name"
+      android:hasCode="true"
+      android:icon="@drawable/icon"
+      android:hardwareAccelerated="true">
 
         <!-- Our activity is the built-in NativeActivity framework class. This will take care of integrating with our NDK code. -->
-        <activity android:name="android.app.NativeActivity"
+        <activity android:name=".Chess"
                   android:label="@string/app_name"
                   android:configChanges="orientation|keyboardHidden">
             <!-- Tell NativeActivity the name of our .so -->
@@ -26,5 +32,5 @@
         </activity>
     </application>
 
-</manifest> 
+</manifest>
 <!-- END_INCLUDE(manifest) -->
