bgen: Python packaging and progress on C++ support

--- a/.gitignore
+++ b/.gitignore
@@ -62,13 +62,7 @@ Icon
 Thumbs.db
 
 # Generated Bindings
-bindings/c/*.c
-bindings/c/*.h
-bindings/cpp/*.cpp
-bindings/cpp/*.hpp
-bindings/py/cffi-*.h
-bindings/py/build_*.py
-bindings/py/py*.py
+/bindings/
 
 # Compiled Python
 *.pyc
@@ -77,3 +71,9 @@ __pycache__/
 
 # CFFI generated source
 _py*.c
+
+# Python Setuptools build and distribution folders.
+/build/
+/dist/
+/.eggs
+/*.egg-info
