tarball: Added symlink commands for linking shared libraries with buitl objects folder - This solves crashes when using added projects in workspaces after doing a tarball clean/build

--- a/compiler/libec2/Makefile
+++ b/compiler/libec2/Makefile
@@ -138,6 +138,8 @@ else
 endif
 	$(call cp,$(TARGET),../../$(SODESTDIR))
 ifdef LINUX_TARGET
+	ln -sf $(LP)$(MODULE)$(SO).0.44 $(OBJ)$(LP)$(MODULE)$(SO).0
+	ln -sf $(LP)$(MODULE)$(SO).0.44 $(OBJ)$(LP)$(MODULE)$(SO)
 	ln -sf $(LP)$(MODULE)$(SO).0.44 ../../$(SODESTDIR)$(LP)$(MODULE)$(SO).0
 	ln -sf $(LP)$(MODULE)$(SO).0.44 ../../$(SODESTDIR)$(LP)$(MODULE)$(SO)
 endif
