--- a/.travis.yml
+++ b/.travis.yml
@@ -47,8 +47,8 @@ before_install:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update          ; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install openssl ; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew link openssl --force ; fi
-  - if [[ "$TRAVIS_OS_NAME" == "windows" ]]; then choco install openssl.light; fi
-  - if [[ "$TRAVIS_OS_NAME" == "windows" ]]; then choco upgrade openssl.light; fi
+  - if [[ "$TRAVIS_OS_NAME" == "windows" ]]; then choco install --pre openssl; fi
+  - if [[ "$TRAVIS_OS_NAME" == "windows" ]]; then choco upgrade --pre openssl; fi
 
 script:
   - if [[ "$TRAVIS_OS_NAME" == "windows" ]]; then mingw32-make -j1 V=1 ENABLE_SSL=y; else make -j1 V=1 ENABLE_SSL=y; fi
