--- a/.travis.yml
+++ b/.travis.yml
@@ -51,4 +51,4 @@ before_install:
   - if [[ "$TRAVIS_OS_NAME" == "windows" ]]; then choco upgrade --pre openssl; fi
 
 script:
-  - if [[ "$TRAVIS_OS_NAME" == "windows" ]]; then mingw32-make -j1 V=1 ENABLE_SSL=y; else make -j1 V=1 ENABLE_SSL=y; fi
+  - if [[ "$TRAVIS_OS_NAME" == "windows" ]]; then mingw32-make OPENSSL_CONF="C:\Program Files\OpenSSL-Win64\bin\openssl.cfg" -j1 V=1 ENABLE_SSL=y; else make -j1 V=1 ENABLE_SSL=y; fi
